--- a/app/views/spree/shared/_no_product_available.html.erb
+++ b/app/views/spree/shared/_no_product_available.html.erb
@@ -4,7 +4,7 @@
   </div>
 
   <p class="no-product-available-header">
-    <%= Spree.t('no_product_available.opps') %>
+    <%= Spree.t('no_product_available.oops') %>
   </p>
 
   <p class='no-product-available-text'>
